# llama4u

./: .gitignore  LICENSE  LICENSE.txt  README.md  llm.py  pyproject.toml  requirements.txt  scraper.py  search.py  setup.sh
.github/workflows/: CI.yml  bandit.yml
app/: pyproject.toml  server.py
app/src/: __init__.py  llama4u.py
app/src/parsers/: documents.py
src/: llama4u.py  search.py
src/input/: input.py
src/sources/: documents.py  search.py
